--- a/index.html
+++ b/index.html
@@ -1705,7 +1705,7 @@
                         <div class="text-6xl text-[#fff]">Tokenomics</div><br>
                         <div class="text-xl text-[#fff]">Revoke Mint Function</div>
                         <div class="text-xl text-[#fff]">Burnt Liquidity</div>
-                        <div class="max-w-lg py-6 text-center text-[#fff]">The $APU token is a deflationary token with a 10% tax on every transaction. 5% of each transaction is burned, and the other 5% is redistributed to holders.</div>
+                        <!-- <div class="max-w-lg py-6 text-center text-[#fff]">The $APU token is a deflationary token with a 10% tax on every transaction. 5% of each transaction is burned, and the other 5% is redistributed to holders.</div> -->
                     </div>
                     <!-- <div class="relative mx-auto flex flex-col items-center justify-center bg-[#000] px-2 py-20 text-[#fff]">
                         <div class="text-6xl">Partners</div>
