--- a/index.html
+++ b/index.html
@@ -1379,7 +1379,7 @@
                         <div class="mx-auto flex w-full max-w-[1280px] items-center justify-between py-2 font-bold text-white">
                             <a href="index.html"><img src="assets/images/pepelogo.png" width="64" height="64" /></a>
                             <div class="hidden items-center justify-center gap-8 lg:flex mr-[20px]">
-                                <a href="index.html#features">Features</a><a href="index.html#story">Story</a><a href="index.html#roadmap">Roadmap</a><a href="index.html#tokenomics">Tokenomics</a><a href="milestones">Milestones</a>
+                                <a href="index.html#features">Features</a><a href="index.html#story">Story</a><a href="index.html#roadmap">Roadmap</a><a href="index.html#tokenomics">Tokenomics</a>
                             </div>
                             <!-- <div class="cursor-pointer whitespace-nowrap rounded-full border border-white px-6 leading-[40px] transition active:scale-100 hover:scale-[1.03]">Connect wallet</div>
                             <div class="hidden w-[40%] items-center gap-4 md:flex">
@@ -1517,7 +1517,7 @@
                                 </div> -->
                                 <div class="flex w-full flex-wrap items-center justify-center gap-4">
                                     <div class="flex items-center gap-2">
-                                        <a class="font-boom flex items-center gap-2 rounded-full border border-white px-7 py-1.5 text-2xl" target="_blank" href="#">
+                                        <a class="font-boom flex items-center gap-2 rounded-full border border-white px-7 py-1.5 text-2xl" target="_blank" href="https://twitter.com/HelponSol">
                                             <i class="">
                                                 <svg stroke="currentColor" fill="none" stroke-width="2" viewBox="0 0 24 24" aria-hidden="true" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
                                                     <path
@@ -1530,7 +1530,7 @@
                                             <span class="text-white">Twitter</span>
                                         </a>
                                     </div>
-                                    <a class="flex items-center gap-2 rounded-full border border-white bg-white px-6 py-2 text-black" target="_blank" href="#">
+                                    <a class="flex items-center gap-2 rounded-full border border-white bg-white px-6 py-2 text-black" target="_blank" href="https://t.me/HelpApuOnSol">
                                         <i class="text-xl">
                                             <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 496 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
                                                 <path
